fix: added overflow: hidden; to Main animation overlay

--- a/src/index.css
+++ b/src/index.css
@@ -31,38 +31,39 @@ code {
 }
 
 .game-clock {
-  font-family: 'Digital-7 Mono', monospace; 
+  font-family: 'Digital-7 Mono', monospace;
   font-size: 2rem;
-  color: #4dff4d; 
-  text-shadow: 0 0 10px #4dff4d, 0 0 20px #4dff4d, 0 0 40px #4dff4d, 0 0 80px #4dff4d; 
+  color: #4dff4d;
+  text-shadow: 0 0 10px #4dff4d, 0 0 20px #4dff4d, 0 0 40px #4dff4d,
+    0 0 80px #4dff4d;
   padding: 14px;
   border-radius: 5px;
-  background-color: #000000; 
-  display: inline-block; 
+  background-color: #000000;
+  display: inline-block;
   margin-top: -10px;
 }
 
 .game-clock-flex {
-  font-family: 'Digital-7 Mono', monospace; 
+  font-family: 'Digital-7 Mono', monospace;
   font-size: 2rem;
-  color: #4dff4d; 
-  text-shadow: 0 0 10px #4dff4d, 0 0 20px #4dff4d, 0 0 40px #4dff4d, 0 0 80px #4dff4d; 
+  color: #4dff4d;
+  text-shadow: 0 0 10px #4dff4d, 0 0 20px #4dff4d, 0 0 40px #4dff4d,
+    0 0 80px #4dff4d;
   padding: 20px;
   border-radius: 5px;
-  background-color: #000000; 
-  display: flex; 
-
+  background-color: #000000;
+  display: flex;
 }
 .game-clock-flex-secondary {
-  font-family: 'Digital-7 Mono', monospace; 
+  font-family: 'Digital-7 Mono', monospace;
   font-size: 2rem;
-  color: #9333e9; 
-  text-shadow: 0 0 8px #9333e9, 0 0 20px #9333e9, 0 0 40px #9333e9, 0 0 80px #9333e9; 
+  color: #9333e9;
+  text-shadow: 0 0 8px #9333e9, 0 0 20px #9333e9, 0 0 40px #9333e9,
+    0 0 80px #9333e9;
   padding: 20px;
   border-radius: 5px;
-  background-color: #000000; 
-  display: flex; 
-
+  background-color: #000000;
+  display: flex;
 }
 
 /* Modal */
@@ -89,7 +90,8 @@ code {
 .countdown-text {
   font-size: 3rem;
   color: #4dff4d;
-  text-shadow: 0 0 10px #4dff4d, 0 0 20px #4dff4d, 0 0 40px #4dff4d, 0 0 80px #4dff4d;
+  text-shadow: 0 0 10px #4dff4d, 0 0 20px #4dff4d, 0 0 40px #4dff4d,
+    0 0 80px #4dff4d;
   font-family: 'Digital-7 Mono', monospace;
 }
 
@@ -98,6 +100,7 @@ code {
   background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
   width: 100%;
   height: 100%;
+  overflow: hidden;
   z-index: 0;
 }
 
@@ -117,22 +120,22 @@ code {
   list-style: none;
   width: 20px;
   height: 20px;
-  background: transparent; 
-  border-radius: 50%; 
+  background: transparent;
+  border-radius: 50%;
   animation: animate 25s linear infinite;
   bottom: -150px;
-  overflow: hidden; 
+  overflow: hidden;
 }
 
 .circles li:before {
-  content: "";
+  content: '';
   position: absolute;
-  top: -50px; 
-  left: -100px; 
+  top: -50px;
+  left: -100px;
   right: -100px;
-  bottom: -100px; 
-  background: linear-gradient(#9333E9, #2463EB);
-  z-index: -1; 
+  bottom: -100px;
+  background: linear-gradient(#9333e9, #2463eb);
+  z-index: -1;
 }
 
 .circles li:nth-child(1) {
@@ -222,5 +225,3 @@ code {
     border-radius: 150px;
   }
 }
-
-
